Refactor code to remove vulnerabilities

--- a/views/restricted.ejs
+++ b/views/restricted.ejs
@@ -13,7 +13,7 @@
   </head>
   <body>
     
-  <% if (USERNAME) { %>
+  <% if (loggedIn) { %>
     <h2>Hello <%= USERNAME %>
     </h2>
     <% } %>
